Changelog
=========

1.0.5 (xxxx-xx-xx)
------------------

- fix css interlinea (#261) [nekorin]
- Plone 4.1 compatibility [andrea]

1.0.4 (2011-11-02)
------------------

- fix reinstal controls and log [andrea]

1.0.3 (2011-06-14)
------------------

- fix permessi [andrea]

1.0.2 (2011-06-13)
------------------

- sistemato template del bando [andrea]

1.0.1 (2011-05-31)
------------------

- modifiche varie ai template per #126 #127 e #128 [andrea]
- destinatari da PropertySheetVocabulary [mmariani]
- sistemato l'indice per i destinatari (con indexer), in modo tale che i suoi figli non lo ereditino [andrea]

1.0.0 (2011-04-15)
------------------

- release iniziale da specifiche: https://support.redturtle.it/clienti/rer-regione-emilia-romagna/attivita-rer/119/
  [mmariani]
- AT Bando e AT Bando Folder Deepening [mmariani]
- vocabulary tipologie da file esterno XML [mmariani]
- portlet per le collection di bandi [mmariani]
- 2 viste per le collection di bandi [mmariani]
- form di ricerca [mmariani]
