@@ -19,15 +19,21 @@
                     item_icon python:getIcon(obj);"
         tal:attributes="class python:oddrow and 'portletItem even' or 'portletItem odd'">
         <div class="bandoInfos">
-          <h3>
-              <a href="#"
-			     class="tile"
-                 tal:attributes="href obj/getURL;
-                                 title obj/Description"
-                 tal:content="obj/pretty_title_or_id">
-                   Title
-              </a>
-          </h3>
+		  <h3 class="bandoTitle"
+                      tal:define="stato_bando python:view.getBandoState(obj)">
+                    <span tal:condition="stato_bando"
+                          tal:define="stato_class python:stato_bando[0];
+                                      stato_str python:stato_bando[1]"
+                          tal:attributes="class string:state-${stato_class} bandoStateClass"
+                          i18n:domain="rer.bandi"
+                          tal:content="stato_str">
+                            stato
+                          </span>
+                    <a class="bandoTitle" tal:attributes="href obj/getURL;
+                                       title obj/pretty_title_or_id"
+                       tal:content="obj/pretty_title_or_id" />
+	      </h3>
+		
 		  <p class="documentDescription bandoDescription"
 		        tal:condition="python:view.data.show_description and obj.Description"
                 tal:content="obj/Description" />
