@@ -5,6 +5,6 @@
     id="++resource++bandi.css"
     media="screen" rel="stylesheet" rendering="import"
     cacheable="True" compression="safe" cookable="True"
-    enabled="1" expression="python:object.portal_type == 'Bando'"/>
+    enabled="1" expression=""/>
 	
 </object>
